# sts2

./: .gitignore  README.md  pyproject.toml
agent_workspace/: AGENTS.md
docs/: agent-handoff.md
samples/http/: README.md
samples/http/20260508/: README.md  SUMMARY.md  index.jsonl  manifest.json  route_http.py
samples/http/action/: 20260508-224602-03_choose_event_option.json  20260508-224602-05_choose_event_option.json  20260508-224607-07_choose_map_node.json  20260508-224608-09_play_card.json  20260508-224608-11_play_card.json  20260508-224609-13_play_card.json  20260508-224609-15_end_turn.json
samples/http/health/: 20260508-224602-01_health.json
samples/http/state/: 20260508-224602-02_event.json  20260508-224602-04_event.json  20260508-224602-06_map.json  20260508-224607-08_combat.json  20260508-224608-10_combat_after_play_card.json  (+3 more)
scripts/: sck_capture_window.swift
src/sts2_bridge/: __init__.py  action_args.py  agent_view.py  cli.py  client.py  filtering.py  macos_screenshot.py  models.py  rendering.py  state_actions.py  trace.py
tests/: conftest.py  test_action_args.py  test_agent_view.py  test_cli.py  test_client.py  test_filtering.py  test_macos_screenshot.py
tests/fixtures/: health.json  state_card_selection.json  state_combat.json  state_event_neow_three_options.json  state_game_over_death_victory_flag.json  state_main_menu_timeline.json  state_main_menu_timeline_overlay.json  state_rest_missing_actions.json  state_rest_potion_only.json  state_rest_proceed.json  state_reward_cards.json  state_reward_rows.json  state_shop_open.json
(+150 files in other folders)
