[project]
name = "sts2-bridge"
version = "0.1.0"
description = "CLI bridge for AI agents to read and operate Slay the Spire 2 game state."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "httpx>=0.27.0",
  "pydantic>=2.7.0",
  "pyobjc-framework-Quartz>=10.0; sys_platform == 'darwin'",
  "pyyaml>=6.0.0",
  "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "respx>=0.21.0",
]

[project.scripts]
sts2 = "sts2_bridge.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
